# pinote

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  compose.local.yml  compose.yaml  compose.yml  index.html  justfile  package.json
.github/workflows/: desktop-build.yml  server-build.yml
electron/: main.mjs  note-store.mjs  note-store.test.ts  preload.cjs  shortcut-manager.mjs  shortcut-settings.mjs  shortcut-settings.test.ts  sync-service.mjs  tray-icon.mjs  window-manager.mjs
electron/sync/: renderer-flush.mjs  renderer-flush.test.ts  sse-change-stream.mjs  sse-change-stream.test.ts
electron/windowing/: shelf-proximity.mjs  shelf-proximity.test.ts  snap-bounds.mjs  snap-bounds.test.ts
scripts/: generate-icons.mjs
server/: Cargo.toml  Dockerfile  Dockerfile.cross
server/docker/: entrypoint.sh
server/migrations/: 0001_initial.sql  0002_note_metadata.sql  0003_note_archive.sql
server/src/: api.rs  auth.rs  bootstrap.rs  lib.rs  main.rs  model.rs  store.rs
server/tests/: api.rs
src/: App.test.tsx  App.tsx  MainApp.tsx  ShelfApp.test.tsx  ShelfApp.tsx  main-window.css  main.tsx  settings.css  styles.css  types.ts
src/components/: ColorPicker.tsx  IconButton.tsx  InlineShelf.tsx  MainNoteList.test.tsx  MainNoteList.tsx  NoteEditor.tsx  NoteList.test.tsx  NoteList.tsx  NoteMenu.tsx  NoteMetadataPanel.tsx  SyncPanel.tsx  TitleBar.tsx  WindowResizeHandles.tsx
src/editor/: emacs-motion.test.ts  emacs-motion.ts  markdown-list-indent.test.ts  markdown-list-indent.ts  markdown-preview.ts  (+1 more)
tests/: electron.spec.ts  shelf-interaction.spec.ts
(+13 files in other folders)
